--- a/iThunderLX/iThunderLiXian/MainView.xib
+++ b/iThunderLX/iThunderLiXian/MainView.xib
@@ -235,7 +235,6 @@
 					<array class="NSMutableArray" key="NSSubviews"/>
 					<string key="NSFrameSize">{815, 470}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1366, 746}}</string>
@@ -261,7 +260,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{82, 85}, {102, 17}}</string>
 							<reference key="NSSuperview" ref="89196029"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="262663447"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
@@ -302,7 +300,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{82, 53}, {69, 17}}</string>
 							<reference key="NSSuperview" ref="89196029"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="1042087660"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
@@ -323,7 +320,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{153, 80}, {153, 22}}</string>
 							<reference key="NSSuperview" ref="89196029"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="445525949"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -362,7 +358,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{153, 48}, {153, 22}}</string>
 							<reference key="NSSuperview" ref="89196029"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="78616239"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -387,7 +382,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{259, 10}, {63, 25}}</string>
 							<reference key="NSSuperview" ref="89196029"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="367671013"/>
 							<string key="NSReuseIdentifierKey">_NS:22</string>
 							<bool key="NSEnabled">YES</bool>
@@ -412,7 +406,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{181, 10}, {63, 25}}</string>
 							<reference key="NSSuperview" ref="89196029"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="246099000"/>
 							<string key="NSReuseIdentifierKey">_NS:22</string>
 							<bool key="NSEnabled">YES</bool>
@@ -437,7 +430,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{339, 15}, {16, 16}}</string>
 							<reference key="NSSuperview" ref="89196029"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:945</string>
 							<int key="NSpiFlags">28938</int>
@@ -456,7 +448,6 @@
 							</set>
 							<string key="NSFrame">{{-9, 98}, {392, 85}}</string>
 							<reference key="NSSuperview" ref="89196029"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="61811117"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -479,7 +470,6 @@
 					</array>
 					<string key="NSFrameSize">{375, 183}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="880631534"/>
 					<string key="NSReuseIdentifierKey">_NS:20</string>
 				</object>
@@ -505,7 +495,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{48, 60}, {69, 17}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="607538154"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
@@ -526,7 +515,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{122, 57}, {430, 22}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="50288829"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -548,7 +536,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{494, 9}, {89, 32}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -573,7 +560,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{396, 9}, {89, 32}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="561716532"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -598,7 +584,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{48, 20}, {266, 17}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="869425376"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
@@ -622,7 +607,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{363, 18}, {16, 16}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="967823044"/>
 							<string key="NSReuseIdentifierKey">_NS:945</string>
 							<int key="NSpiFlags">28938</int>
@@ -631,7 +615,6 @@
 					</array>
 					<string key="NSFrameSize">{607, 91}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="518921973"/>
 					<string key="NSReuseIdentifierKey">_NS:20</string>
 				</object>
@@ -1258,6 +1241,22 @@
 					</object>
 					<int key="connectionID">288</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">enabled: values.UserListType</string>
+						<reference key="source" ref="954907194"/>
+						<reference key="destination" ref="497450963"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="954907194"/>
+							<reference key="NSDestination" ref="497450963"/>
+							<string key="NSLabel">enabled: values.UserListType</string>
+							<string key="NSBinding">enabled</string>
+							<string key="NSKeyPath">values.UserListType</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">326</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -1846,124 +1845,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">325</int>
+			<int key="maxID">326</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">MainView</string>
-					<string key="superclassName">NSWindowController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="add_task_ok_button">NSButton</string>
-						<string key="add_task_progress">NSProgressIndicator</string>
-						<string key="add_task_url">NSTextField</string>
-						<string key="add_task_window">NSWindow</string>
-						<string key="login_ok_button">NSButton</string>
-						<string key="login_password">NSTextField</string>
-						<string key="login_progress">NSProgressIndicator</string>
-						<string key="login_username">NSTextField</string>
-						<string key="login_window">NSWindow</string>
-						<string key="toobaritem_add_task">NSToolbarItem</string>
-						<string key="toobaritem_loadmore">NSToolbarItem</string>
-						<string key="toobaritem_login">NSToolbarItem</string>
-						<string key="toobaritem_refresh">NSToolbarItem</string>
-						<string key="toobaritem_yundelete">NSToolbarItem</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="add_task_ok_button">
-							<string key="name">add_task_ok_button</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="add_task_progress">
-							<string key="name">add_task_progress</string>
-							<string key="candidateClassName">NSProgressIndicator</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="add_task_url">
-							<string key="name">add_task_url</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="add_task_window">
-							<string key="name">add_task_window</string>
-							<string key="candidateClassName">NSWindow</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="login_ok_button">
-							<string key="name">login_ok_button</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="login_password">
-							<string key="name">login_password</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="login_progress">
-							<string key="name">login_progress</string>
-							<string key="candidateClassName">NSProgressIndicator</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="login_username">
-							<string key="name">login_username</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="login_window">
-							<string key="name">login_window</string>
-							<string key="candidateClassName">NSWindow</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="toobaritem_add_task">
-							<string key="name">toobaritem_add_task</string>
-							<string key="candidateClassName">NSToolbarItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="toobaritem_loadmore">
-							<string key="name">toobaritem_loadmore</string>
-							<string key="candidateClassName">NSToolbarItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="toobaritem_login">
-							<string key="name">toobaritem_login</string>
-							<string key="candidateClassName">NSToolbarItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="toobaritem_refresh">
-							<string key="name">toobaritem_refresh</string>
-							<string key="candidateClassName">NSToolbarItem</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="toobaritem_yundelete">
-							<string key="name">toobaritem_yundelete</string>
-							<string key="candidateClassName">NSToolbarItem</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MainView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">SUUpdater</string>
-					<string key="superclassName">NSObject</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">checkForUpdates:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">checkForUpdates:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">checkForUpdates:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">delegate</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">delegate</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">delegate</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/SUUpdater.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
