--- a/iThunderLX/iThunderLiXian/MainView.xib
+++ b/iThunderLX/iThunderLiXian/MainView.xib
@@ -235,6 +235,7 @@
 					<array class="NSMutableArray" key="NSSubviews"/>
 					<string key="NSFrameSize">{815, 470}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1366, 746}}</string>
@@ -252,7 +253,7 @@
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="89196029">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSTextField" id="61811117">
@@ -430,7 +431,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{339, 15}, {16, 16}}</string>
 							<reference key="NSSuperview" ref="89196029"/>
-							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:945</string>
 							<int key="NSpiFlags">28938</int>
 							<double key="NSMaxValue">100</double>
@@ -469,7 +469,6 @@
 						</object>
 					</array>
 					<string key="NSFrameSize">{375, 183}</string>
-					<reference key="NSSuperview"/>
 					<reference key="NSNextKeyView" ref="880631534"/>
 					<string key="NSReuseIdentifierKey">_NS:20</string>
 				</object>
@@ -480,7 +479,7 @@
 			<object class="NSWindowTemplate" id="1004824840">
 				<int key="NSWindowStyleMask">3</int>
 				<int key="NSWindowBacking">2</int>
-				<string key="NSWindowRect">{{163, 199}, {607, 91}}</string>
+				<string key="NSWindowRect">{{163, 199}, {607, 115}}</string>
 				<int key="NSWTFlags">1685586944</int>
 				<string key="NSWindowTitle">添加任务</string>
 				<string key="NSWindowClass">NSWindow</string>
@@ -493,8 +492,9 @@
 						<object class="NSTextField" id="518921973">
 							<reference key="NSNextResponder" ref="59753985"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{48, 60}, {69, 17}}</string>
+							<string key="NSFrame">{{17, 55}, {69, 17}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="607538154"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
@@ -513,9 +513,10 @@
 						<object class="NSTextField" id="607538154">
 							<reference key="NSNextResponder" ref="59753985"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{122, 57}, {430, 22}}</string>
+							<string key="NSFrame">{{85, 42}, {470, 43}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
-							<reference key="NSNextKeyView" ref="50288829"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="189231291"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="445518148">
@@ -534,8 +535,9 @@
 						<object class="NSButton" id="561716532">
 							<reference key="NSNextResponder" ref="59753985"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{494, 9}, {89, 32}}</string>
+							<string key="NSFrame">{{494, 6}, {89, 32}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -558,8 +560,9 @@
 						<object class="NSButton" id="967823044">
 							<reference key="NSNextResponder" ref="59753985"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{396, 9}, {89, 32}}</string>
+							<string key="NSFrame">{{396, 6}, {89, 32}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="561716532"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -582,9 +585,10 @@
 						<object class="NSTextField" id="50288829">
 							<reference key="NSNextResponder" ref="59753985"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{48, 20}, {266, 17}}</string>
+							<string key="NSFrame">{{170, 93}, {388, 17}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
-							<reference key="NSNextKeyView" ref="869425376"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="518921973"/>
 							<string key="NSReuseIdentifierKey">_NS:1535</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="60479949">
@@ -605,17 +609,44 @@
 						<object class="NSProgressIndicator" id="869425376">
 							<reference key="NSNextResponder" ref="59753985"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{363, 18}, {16, 16}}</string>
+							<string key="NSFrame">{{364, 15}, {16, 16}}</string>
 							<reference key="NSSuperview" ref="59753985"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="967823044"/>
 							<string key="NSReuseIdentifierKey">_NS:945</string>
 							<int key="NSpiFlags">28938</int>
 							<double key="NSMaxValue">100</double>
 						</object>
+						<object class="NSButton" id="189231291">
+							<reference key="NSNextResponder" ref="59753985"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{79, 6}, {125, 32}}</string>
+							<reference key="NSSuperview" ref="59753985"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="869425376"/>
+							<string key="NSReuseIdentifierKey">_NS:9</string>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSButtonCell" key="NSCell" id="54060853">
+								<int key="NSCellFlags">67108864</int>
+								<int key="NSCellFlags2">134217728</int>
+								<string key="NSContents">添加BT文件下载</string>
+								<reference key="NSSupport" ref="773306348"/>
+								<string key="NSCellIdentifier">_NS:9</string>
+								<reference key="NSControlView" ref="189231291"/>
+								<int key="NSButtonFlags">-2038284288</int>
+								<int key="NSButtonFlags2">129</int>
+								<string key="NSAlternateContents"/>
+								<string key="NSKeyEquivalent"/>
+								<int key="NSPeriodicDelay">200</int>
+								<int key="NSPeriodicInterval">25</int>
+							</object>
+							<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
+						</object>
 					</array>
-					<string key="NSFrameSize">{607, 91}</string>
+					<string key="NSFrameSize">{607, 115}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSNextKeyView" ref="518921973"/>
+					<reference key="NSWindow"/>
+					<reference key="NSNextKeyView" ref="50288829"/>
 					<string key="NSReuseIdentifierKey">_NS:20</string>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1366, 746}}</string>
@@ -1107,6 +1138,22 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
+						<string key="label">button_add_bt_task:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="189231291"/>
+					</object>
+					<int key="connectionID">329</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">button_add_bt_task</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="189231291"/>
+					</object>
+					<int key="connectionID">330</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
 						<string key="label">orderFrontStandardAboutPanel:</string>
 						<reference key="source" ref="1003"/>
 						<reference key="destination" ref="713779998"/>
@@ -1458,12 +1505,13 @@
 						<int key="objectID">179</int>
 						<reference key="object" ref="59753985"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="869425376"/>
-							<reference ref="607538154"/>
-							<reference ref="518921973"/>
 							<reference ref="967823044"/>
 							<reference ref="561716532"/>
+							<reference ref="869425376"/>
 							<reference ref="50288829"/>
+							<reference ref="607538154"/>
+							<reference ref="518921973"/>
+							<reference ref="189231291"/>
 						</array>
 						<reference key="parent" ref="1004824840"/>
 					</object>
@@ -1757,6 +1805,19 @@
 						<reference key="object" ref="954907194"/>
 						<reference key="parent" ref="209173599"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">327</int>
+						<reference key="object" ref="189231291"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="54060853"/>
+						</array>
+						<reference key="parent" ref="59753985"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">328</int>
+						<reference key="object" ref="54060853"/>
+						<reference key="parent" ref="189231291"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1833,6 +1894,8 @@
 				<string key="308.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="311.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="322.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="327.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="328.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<boolean value="YES" key="5.IBNSWindowAutoPositionCentersHorizontal"/>
 				<boolean value="YES" key="5.IBNSWindowAutoPositionCentersVertical"/>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1845,9 +1908,129 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">326</int>
+			<int key="maxID">330</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">MainView</string>
+					<string key="superclassName">NSWindowController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="add_task_ok_button">NSButton</string>
+						<string key="add_task_progress">NSProgressIndicator</string>
+						<string key="add_task_url">NSTextField</string>
+						<string key="add_task_window">NSWindow</string>
+						<string key="button_add_bt_task">NSButton</string>
+						<string key="login_ok_button">NSButton</string>
+						<string key="login_password">NSTextField</string>
+						<string key="login_progress">NSProgressIndicator</string>
+						<string key="login_username">NSTextField</string>
+						<string key="login_window">NSWindow</string>
+						<string key="toobaritem_add_task">NSToolbarItem</string>
+						<string key="toobaritem_loadmore">NSToolbarItem</string>
+						<string key="toobaritem_login">NSToolbarItem</string>
+						<string key="toobaritem_refresh">NSToolbarItem</string>
+						<string key="toobaritem_yundelete">NSToolbarItem</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="add_task_ok_button">
+							<string key="name">add_task_ok_button</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="add_task_progress">
+							<string key="name">add_task_progress</string>
+							<string key="candidateClassName">NSProgressIndicator</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="add_task_url">
+							<string key="name">add_task_url</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="add_task_window">
+							<string key="name">add_task_window</string>
+							<string key="candidateClassName">NSWindow</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="button_add_bt_task">
+							<string key="name">button_add_bt_task</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="login_ok_button">
+							<string key="name">login_ok_button</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="login_password">
+							<string key="name">login_password</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="login_progress">
+							<string key="name">login_progress</string>
+							<string key="candidateClassName">NSProgressIndicator</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="login_username">
+							<string key="name">login_username</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="login_window">
+							<string key="name">login_window</string>
+							<string key="candidateClassName">NSWindow</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="toobaritem_add_task">
+							<string key="name">toobaritem_add_task</string>
+							<string key="candidateClassName">NSToolbarItem</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="toobaritem_loadmore">
+							<string key="name">toobaritem_loadmore</string>
+							<string key="candidateClassName">NSToolbarItem</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="toobaritem_login">
+							<string key="name">toobaritem_login</string>
+							<string key="candidateClassName">NSToolbarItem</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="toobaritem_refresh">
+							<string key="name">toobaritem_refresh</string>
+							<string key="candidateClassName">NSToolbarItem</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="toobaritem_yundelete">
+							<string key="name">toobaritem_yundelete</string>
+							<string key="candidateClassName">NSToolbarItem</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MainView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SUUpdater</string>
+					<string key="superclassName">NSObject</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">checkForUpdates:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">checkForUpdates:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">checkForUpdates:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">delegate</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">delegate</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">delegate</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SUUpdater.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
@@ -1855,7 +2038,7 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="NSMenuCheckmark">{11, 11}</string>
 			<string key="NSMenuMixedState">{10, 3}</string>
-			<string key="delete_128">{64, 64}</string>
+			<string key="delete_128">{128, 128}</string>
 			<string key="loadToolbarItem">{128, 128}</string>
 			<string key="login">{311, 63}</string>
 			<string key="loginToolbarItem">{128, 128}</string>
